# SAF

./: .gitignore  README.md  pyproject.toml
artifacts/architecture/: program_status_v0.md  risk_blocker_register_v0.csv  week1_backlog_v0.csv  x09_vertical_slice_v0.md
artifacts/compliance/: production_readiness_v0.md  secret_management_v0.md
artifacts/data-audit/: kalshi_public_backfill_v0.json  kalshi_public_backfill_v1.json  l2_reconstructor_v0.md  phase0_coverage_cost_v0.md  phase0_inventory.json  phase1_nba_hour_sample.json  phase1_sample_measurement.json  phase1_schema_timestamp_v0.md  polymarket_v1_bounded_sports_extract_v0.json  x01_full_day_input_manifest_v1.json  x01_full_day_preflight_v1.json  x02_full_day_input_manifest_2026-04-22_v1.json  x02_full_day_input_manifest_2026-06-05_v1.json  x02_full_day_input_manifest_2026-06-25_v1.json  x02_timestamp_input_bundle_v1.json  x02_timestamp_sample_measurement_v1.json
artifacts/execution-tca/: maker_bounds_v0.md  (+1 more)
charter/: SOURCE_MANIFEST.sha256  catalog_assignments.csv  catalog_registry.csv  catalog_team_assignments.csv  research_program_charter_v0.2.md
registries/: artifact_registry.csv  compliance_matrix.csv  data_license_register.csv  dataset_registry.csv  experiment_amendment_ledger.csv  experiment_registry.csv  model_registry.csv
tests/: test_clusters.py  test_compliance_registry.py  test_execution.py  test_experiment_registry.py  test_governance.py  test_labels.py  test_program_integration.py  test_recorder_supervisor.py  test_recording.py  test_research_registries.py
tools/: validate_governance.py
(+213 files in other folders)
